<resources>
    <!--Nome dos app e das abas-->
    <string name="app_name">Área de Formas Geométricas</string>
    <string name="app_retangulo">Retângulo</string>
    <string name="app_triangulo">Triângulo</string>
    <string name="app_circulo">Circulo</string>
    <string name="app_areaCalculo">Área</string>

    <!--Text View-->
    <string name="txtTipoFormaGeometrica">Selecione a Forma: </string>

    <!-- Itens Radio Group-->
    <string name="radioBtnRetangulo">Retângulo</string>
    <string name="radioBtnTriangulo">Triângulo</string>
    <string name="radioBtnCirculo">Circulo</string>

    <!--Text Button-->
    <string name="btnAvancar">Avançar</string>
    <string name="btnCalcular">Calcular</string>
    <string name="btnReiniciar">Começar Novamente</string>

    <!-- Text Info Dados-->
    <string name="txtInfoDadosCirculo">Informe o dado do circulo: </string>
    <string name="txtInfoDadosRetangulo">Informe os dado do retângulo: </string>
    <string name="txtInfoDadosTriangulo">Informe os dado do triângulo: </string>

    <!--Text Dados-->
    <string name="txtDadoCirculo">Raio do Circulo</string>
    <string name="txtDadoRetangulo1">Base do Retângulo</string>
    <string name="txtDadoRetangulo2">Altura do Retângulo</string>
    <string name="txtDadoTriangulo1">Base do Triângulo</string>
    <string name="txtDadoTriangulo2">Altura do Triângulo</string>

</resources>
