<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:paddingTop="@dimen/espacoBarraTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInfoDadosRetangulo"
        android:textStyle="bold"
        android:textSize="@dimen/titulo"
        />

    <EditText

        android:id="@+id/editTextBaseRetangulo"

        android:paddingTop="@dimen/espacoTituloInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtDadoRetangulo1"
        />

    <EditText

        android:id="@+id/editTextAlturaRetangulo"

        android:paddingTop="@dimen/espacoTituloInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtDadoRetangulo2"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        >

        <Button

            android:id="@+id/buttonCalcular"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCalcular"
            android:onClick="clicouCalcular"
            />

    </LinearLayout>

</LinearLayout>